derive/tests/snapshots/scheduled_table/CleanupTimer/create_cleanup_timer.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Create a row in the `cleanup_timer` table.
    pub fn create_cleanup_timer<'a>(
        &'a self,
        cleanup_timer: CreateCleanupTimer,
    ) -> Result<CleanupTimer, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let scheduled_id = u64::default();
        let scheduled_at = cleanup_timer.scheduled_at;
        let cleanup_timer = CleanupTimer {
            scheduled_id,
            scheduled_at,
        };
        match self.db().cleanup_timer().try_insert(cleanup_timer.clone()) {
            Ok(entity) => Ok(entity),
            Err(error) => {
                match error {
                    ::spacetimedb::TryInsertError::UniqueConstraintViolation(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::UniqueConstraintViolation {
                            table_name: "cleanup_timer".into(),
                            action: crate::spacetimedsl::error::Action::Create,
                            error_from: crate::spacetimedsl::error::ErrorFrom::SpacetimeDB,
                            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                            column_names_and_row_values: format!(
                                "{{ scheduled_id : {} }}", cleanup_timer.scheduled_id
                            )
                                .into(),
                        })
                    }
                    ::spacetimedb::TryInsertError::AutoIncOverflow(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::AutoIncOverflow {
                            table_name: "cleanup_timer".into(),
                        })
                    }
                }
            }
        }
    }
}
