derive/tests/snapshots/scheduled_table/CleanupTimer/delete_cleanup_timer_by_scheduled_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to delete a `CleanupTimer` row in the `cleanup_timer` table whose value matches the value from the unique single-column btree index on the `scheduled_id` column.*/
    pub fn delete_cleanup_timer_by_scheduled_id<'a>(
        &'a self,
        scheduled_id: impl Into<CleanupTimerScheduledId> + Clone,
    ) -> Result<
        crate::spacetimedsl::delete::DeletionResult,
        crate::spacetimedsl::error::SpacetimeDSLError,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let scheduled_id = scheduled_id.clone().into().value();
        let row_to_delete = self.db().cleanup_timer().scheduled_id().find(scheduled_id);
        let row_to_delete = match row_to_delete {
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "cleanup_timer".into(),
                    column_names_and_row_values: format!(
                        "{{ scheduled_id : {} }}", & scheduled_id
                    )
                        .into(),
                });
            }
            Some(row_to_delete) => row_to_delete,
        };
        let mut deletion_result_entry = crate::spacetimedsl::delete::DeletionResultEntry {
            table_name: "cleanup_timer".into(),
            column_name: "scheduled_id".into(),
            strategy: crate::spacetimedsl::delete::OnDeleteStrategy::Delete,
            row_value: format!(
                "{}", CleanupTimerScheduledId::new(row_to_delete.scheduled_id.clone())
            )
                .into(),
            child_entries: vec![],
        };
        match self
            .db()
            .cleanup_timer()
            .scheduled_id()
            .delete(&row_to_delete.scheduled_id)
        {
            false => {
                return Err(
                    crate::spacetimedsl::error::SpacetimeDSLError::Error(
                        "Delete One Error: `count_of_rows_to_delete ( 1 ) != ( 0 ) count_of_deleted_rows`!"
                            .to_string(),
                    ),
                );
            }
            true => {}
        };
        return Ok(crate::spacetimedsl::delete::DeletionResult {
            table_name: "cleanup_timer".into(),
            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
            entries: vec![deletion_result_entry],
            error_from_hook: None,
        });
    }
}
