derive/tests/snapshots/scheduled_table/CleanupTimer/get_all_cleanup_timers.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `cleanup_timer` table.
    pub fn get_all_cleanup_timers<'a>(&'a self) -> impl Iterator<Item = CleanupTimer> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().cleanup_timer().iter()
    }
}
