derive/tests/snapshots/scheduled_table/CleanupTimer/table.snap
---
source: derive/src/characterization_tests.rs
---
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct CleanupTimerScheduledId {
    value: u64,
}
impl Default for CleanupTimerScheduledId {
    fn default() -> CleanupTimerScheduledId {
        CleanupTimerScheduledId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for CleanupTimerScheduledId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "CleanupTimerScheduledId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for CleanupTimerScheduledId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&CleanupTimer> for CleanupTimerScheduledId {
    fn from(value: &CleanupTimer) -> Self {
        CleanupTimerScheduledId {
            value: value.scheduled_id.clone(),
        }
    }
}
impl From<&CleanupTimer> for Option<CleanupTimerScheduledId> {
    fn from(value: &CleanupTimer) -> Option<CleanupTimerScheduledId> {
        Some(CleanupTimerScheduledId {
            value: value.scheduled_id.clone(),
        })
    }
}
impl From<&CleanupTimerScheduledId> for Option<CleanupTimerScheduledId> {
    fn from(value: &CleanupTimerScheduledId) -> Option<CleanupTimerScheduledId> {
        use crate::spacetimedsl::Wrapper;
        Some(CleanupTimerScheduledId::new(value.value()))
    }
}
impl From<&CleanupTimerScheduledId> for CleanupTimerScheduledId {
    fn from(value: &CleanupTimerScheduledId) -> Self {
        use crate::spacetimedsl::Wrapper;
        CleanupTimerScheduledId::new(value.value())
    }
}
impl CleanupTimer {
    ///
    pub fn get_scheduled_id(&self) -> CleanupTimerScheduledId {
        use crate::spacetimedsl::Wrapper;
        CleanupTimerScheduledId::new(self.scheduled_id.clone())
    }
    ///
    pub fn get_scheduled_at(&self) -> &spacetimedb::ScheduleAt {
        use crate::spacetimedsl::Wrapper;
        &self.scheduled_at
    }
}
///
pub struct CreateCleanupTimer {
    pub scheduled_at: spacetimedb::ScheduleAt,
}

// Generated DSL methods:
// count_of_all_cleanup_timers
// create_cleanup_timer
// delete_cleanup_timer_by_scheduled_id
// get_all_cleanup_timers
// get_cleanup_timer_by_scheduled_id
